--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,24 +9,19 @@
       "request": "launch",
       "name": "Launch Program",
       "program": "${workspaceFolder}\\dist\\index.js",
-      "outFiles": [
-        "${workspaceFolder}/**/*.js"
-      ]
+      "outFiles": ["${workspaceFolder}/**/*.js"]
     },
     {
       "type": "node",
       "request": "launch",
       "name": "Jest Current File",
       "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "args": [
-        "--config",
-        "jest.config.json",
-        "${relativeFile}"
-      ],
+      "args": ["${fileBasename}", "-u"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
+      "disableOptimisticBPs": true,
       "windows": {
-        "program": "${workspaceFolder}/node_modules/jest/bin/jest",
+        "program": "${workspaceFolder}/node_modules/jest/bin/jest"
       }
     }
   ]
