--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
     "npm publish": "publish to npm"
   },
   "name": "dd-rx-state",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Redux-like state handling, but created with rxjs and allowing for less but typesafe boilerplate with typescript.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "lint": "tslint -p .",
-    "test:w": "jest --config jest.config.json --watchAll",
-    "test": "jest --config jest.config.json"
+    "test:w": "jest --watchAll",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "tsconfig.spec.json"
+      }
+    }
   },
   "repository": {
     "type": "git",
@@ -30,13 +38,13 @@
   },
   "homepage": "https://github.com/rlexa/dd-rx-state#readme",
   "devDependencies": {
-    "@types/jest": "^23.3.8",
-    "jest": "^23.6.0",
-    "ts-jest": "^23.10.4",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.3"
+    "@types/jest": "^25.2.1",
+    "jest": "^25.3.0",
+    "ts-jest": "^25.3.1",
+    "tslint": "^6.1.1",
+    "typescript": "~3.7.5"
   },
   "dependencies": {
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.5.5"
   }
 }
