--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -2,12 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jest"
-    ]
+    "types": ["jest", "node"]
   },
-  "include": [
-    "**/*.spec.ts",
-    "**/*.d.ts"
-  ]
+  "include": ["lib/**/*.spec.ts", "lib/**/*.d.ts"]
 }
