--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "npm publish": "publish to npm"
   },
   "name": "dd-rx-state",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Redux-like state handling, but created with rxjs and allowing for less but typesafe boilerplate with typescript.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "jest": "^25.3.0",
+    "prettier": "^2.0.4",
     "ts-jest": "^25.3.1",
     "tslint": "^6.1.1",
     "typescript": "~3.7.5"
